[gd_scene load_steps=8 format=3 uid="uid://bb2jsrq85eag4"]

[ext_resource type="Script" uid="uid://c3o4tg3c50vik" path="res://scripts/masks_code/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://ctfukfall2x00" path="res://scenes/masks_background/blank_menu_bkgrnd.png" id="1_l6cm7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("1_l6cm7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.51718444, 0.5171845, 0.51718444, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.74978, 0.74978, 0.74977994, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6cm7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 681.0
offset_top = 245.0
offset_right = -298.0
offset_bottom = -261.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -707.0
offset_top = -254.0
offset_right = 319.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.5
offset_top = -98.75
offset_right = -19.5
offset_bottom = 87.25
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
text = "Start game"

[node name="option_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
text = "Options"

[node name="exit_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.5
offset_top = -174.0
offset_right = -81.5
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Mask_demo"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/option_Button" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_Button" to="." method="_on_exit_button_pressed"]
